<resources>

    <!-- Application Strings -->
    <string name="app_name">Network Widget</string>

    <!-- .WidgetProvider Strings -->
    <string name="widget_provider_title">Network Widget</string>
    
    <!-- .WidgetConfigureActivity Strings -->
    <string name="widget_configure_activity_preview_desc">Configure Network Widget</string>
    <string name="widget_configure_activity_title">Configure Network Widget</string>
    
    <string name="widget_configure_activity_setting_">PLACEHOLDER!</string>
    <string name="widget_configure_activity_setting_frequency">Update Frequency</string>
    <string name="widget_configure_activity_setting_frequency_default">30 Minutes</string>
    <string name="widget_configure_activity_setting_background">Widget Background</string>
    <string name="widget_configure_activity_setting_background_radio_">PLACEHOLDER!</string>
    <string name="widget_configure_activity_setting_background_radio_dark">Dark</string>
    <string name="widget_configure_activity_setting_background_radio_light">Light</string>
    
    <string name="widget_configure_activity_btn_">PLACEHOLDER!</string>
    <string name="widget_configure_activity_btn_cancel">Cancel</string>
    <string name="widget_configure_activity_btn_confirm">Confirm</string>
    
    <!-- widget_network_layout.xml Strings -->
    <string name="widget_network_layout_">PLACEHOLDER!</string>
    <string name="widget_network_layout_network_logo_desc">Logo of your Current Mobile Network</string>
    <string name="widget_network_layout_network_title_default">Searching for Mobile Network</string>
    <string name="widget_network_layout_network_title_airplane">Airplane Mode ON</string>
    <string name="widget_network_layout_network_title_unsupported">Mobile Type Unsupported</string>
    <string name="widget_network_layout_network_title_simcard_absent">Sim Card Absent!</string>
    <string name="widget_network_layout_network_title_simcard_locked">Sim Card is PIN Locked!</string>

</resources>